# oiling

./: README.md  pyproject.toml
src/oiling/: __init__.py  morph_engine.py  morph_rule_adapter.py  morphology.py  primitives.py  problem.py  prompt2features.py  solution.py  utils.py
tests/: morphology.py  test_paradigm_table.py
