[project]
name = "oiling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samion Suwito", email = "samion@berkeley.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.2",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
